tests/invalid_ident.stderr
error: expected string literal
  --> $DIR/invalid_ident.rs:11:15
   |
11 |     #[ident = 3]
   |               ^
